phase2_Dev/src/objects/Historical_Unlicen_Providers_Staging__c.object
<CustomObject>
    <fields>
        <fullName>ErrorText__c</fullName>
        <label>ErrorText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Address1__c</fullName>
        <label>Unlicensed Address1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unlicensed_City__c</fullName>
        <label>Unlicensed City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlicensed_ID__c</fullName>
        <label>Unlicensed ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Licensor_Name__c</fullName>
        <label>Unlicensed Licensor Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Licensor__c</fullName>
        <label>Unlicensed Licensor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Name__c</fullName>
        <label>Unlicensed Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlicensed_Phone__c</fullName>
        <label>Unlicensed Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlicensed_State__c</fullName>
        <label>Unlicensed State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlicensed_ZipCode__c</fullName>
        <label>Unlicensed ZipCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Historical Unlicen Providers Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Unlicensed_Name__c</columns>
        <columns>Unlicensed_Address1__c</columns>
        <columns>Unlicensed_City__c</columns>
        <columns>Unlicensed_ZipCode__c</columns>
        <columns>Unlicensed_Phone__c</columns>
        <columns>Unlicensed_Licensor__c</columns>
        <columns>Provider_Processed__c</columns>
        <columns>ErrorText__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LP-{0000000}</displayFormat>
        <label>Legacy Unlicensed Provider Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Unlicen Providers Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>